Add light/dark mode to storybook

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -5,7 +5,9 @@
   .grecaptcha-badge{
     display: none;
   }
-
+  .docs-story{
+    background: light-dark(#fff, #000);
+  }
   :root{
     --font-firasans: 'Fira Sans', sans-serif;
     --font-mulish: 'Mulish', sans-serif;
